--- a/views/index.erb
+++ b/views/index.erb
@@ -6,15 +6,13 @@
  <br>
  <br>
  <p>Escriba código aceptado por la gramática en el área de texto y a continuación pulse en el botón <i>Parsear</i>.<br><br>Puede guardar un ejemplo de código escribiendo el nombre del archivo en el campo <i>Guardar</i> (como máximo se pueden almacenar 10 archivos).<br>Los archivos guardados se almacenarán en la barra horizontal encima del área de texto.<br>Puede eliminar cualquiera de los archivos guardados escribiendo el nombre en el campo <i>Eliminar</i>.</p>
- <br>
+ <br><br>
+
+ <li> <a href="/programas"  title="Programas guardados" <%=current?("/programas")%>>Programas guardados</a> </li>
+
+ 
   <p>
-  <nav>
-  <ul>
-    <% programs.each do |p| %>
-      <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
-    <% end %>
-  </ul>
-  </nav>
+
   <table>
     <tr>
       <tr>
