--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,6 +27,7 @@
         <li> <a href="http://datamapper.org/"  title="DataMapper">DataMapper</a> </li>
         <li> <a href="https://github.com/alu0100597929/Prct6_Analizador_PL0_PEG.git"  title="Repo">Repositorio</a> </li>
         <li> <a href="/tests"  title="Tests" <%=current?("/tests")%>>Tests</a> </li>
+        <li> <a href="/programas"  title="Programas guardados" <%=current?("/programas")%>>Programas guardados</a> </li>
         <br><br>
         <li> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
         <li> <a href="/auth/facebook"  title="Facebook" <%=current?("/auth/facebook")%>>Sign in with Facebook</a> </li>
