--- a/views/programas.erb
+++ b/views/programas.erb
@@ -1,3 +1,6 @@
+<div id="content">
+ <center>
+
 <p>
 <nav>
   <ul>
@@ -7,3 +10,9 @@
   </ul>
  </nav>
  </p>
+
+   </center>
+</div>
+
+<script src="pl0.js"></script>
+<script src="main.js"></script>
