cambios en programas guardados

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
       <tr>
       <td>
           
-          <label for="saveas"><font color="444444"><b>Guardar (máx 10 archivos)</b></font></label>
+          <label for="saveas"><font color="444444"><b>Guardar</b></font></label>
           <input id="saveas" type="text" name="fname" 
                  title="name" pattern="\w+" />
         </form>
