--- a/views/programas.erb
+++ b/views/programas.erb
@@ -11,6 +11,25 @@
  </nav>
  </p>
 
+
+<button id="parse" type="button"><font color="444444"><b>Parsear</b></font></button>
+  </p>
+  <br>
+  <table id="tablaOUT"  style="overflow-y:scroll">
+    <th><font color="444444">Tokens</font></th>
+    <th>
+    <tr>
+    <td>
+      <div class="output">
+        <pre>
+<span id="output"></span> <!-- Output goes here! --> 
+        </pre>
+      </div>
+    </td>
+    </tr>
+    </th>
+  </table>
+  
    </center>
 </div>
 
