pruebas en programas guardados

--- a/views/programas.erb
+++ b/views/programas.erb
@@ -1,6 +1,6 @@
 <div id="content">
  <center>
-
+<!--
 <p>
 <nav>
   <ul>
@@ -22,14 +22,14 @@
     <td>
       <div class="output">
         <pre>
-<span id="output"></span> <!-- Output goes here! --> 
+<span id="output"></span> 
         </pre>
       </div>
     </td>
     </tr>
     </th>
   </table>
-  
+-->
    </center>
 </div>
 
