pruebas en programas guardados 2

--- a/views/programas.erb
+++ b/views/programas.erb
@@ -1,35 +1,7 @@
 <div id="content">
  <center>
-<!--
-<p>
-<nav>
-  <ul>
-    <% programs.each do |p| %>
-      <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
-    <% end %>
-  </ul>
- </nav>
- </p>
 
-
-<button id="parse" type="button"><font color="444444"><b>Parsear</b></font></button>
-  </p>
-  <br>
-  <table id="tablaOUT"  style="overflow-y:scroll">
-    <th><font color="444444">Tokens</font></th>
-    <th>
-    <tr>
-    <td>
-      <div class="output">
-        <pre>
-<span id="output"></span> 
-        </pre>
-      </div>
-    </td>
-    </tr>
-    </th>
-  </table>
--->
+<p>holaaaa</p>
    </center>
 </div>
 
