añadido parametros a la base de datos

--- a/views/index.erb
+++ b/views/index.erb
@@ -64,10 +64,11 @@
     </th>
   </table>
 
+<br><br>
 
 <nav>
   <table id="tablaArchivos">
-  <tr><th>Nombre</th><th>Usuario</th><th>Pertenece a</th></tr>
+  <tr><th>Nombre</th><th>Usuario</th><th>Red social</th></tr>
     <tr>
       <td>
         <ul>
@@ -85,7 +86,7 @@
   </tr>
   </table>
   </nav>
-  
+
   </center>
 </div>
 
