--- a/views/index.erb
+++ b/views/index.erb
@@ -70,17 +70,23 @@
   <table id="tablaArchivos">
   <tr><th>Nombre</th><th>Usuario</th><th>Red social</th></tr>
     <tr>
-      <td>
+      
         <ul>
           <% programs.each do |p| %>
-            <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
+            <td>
+              <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
+            </td>
+
+            <td>
+              <p><%= p.user %></p>
+            </td>
+
+            <td>
+              <p><%= p.provider %></p>
+            </td>
+
           <% end %>
-        </ul>
-      </td>
-      <td>
-      </td>
-      <td>
-      </td>
+        </ul>  
 
     </tr>
   </tr>
