--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Analizador Jison PL0</title>
+    <title>Analizador de Ámbito en PL0</title>
     <link rel="icon" type="image/icon" href="images/favicon.ico" />
     <link rel="stylesheet" href="/styles.css" type="text/css" media="screen" charset="utf-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -23,7 +23,6 @@
 		<li> <a href="/"  title="Home" <%=current?("/")%>>Página principal</a> </li>
         <li> <a href="/grammar"  title="Grammar" <%=current?("/grammar")%>>Gramática</a> </li>
         <li> <a href="http://en.wikipedia.org/wiki/Recursive_descent_parser#Example_parser"   title="Wikipedia">Wikipedia-PL0</a> </li>
-        <li> <a href="http://zaach.github.io/jison/"  title="Jison">Jison</a> </li>
         <li> <a href="http://datamapper.org/"  title="DataMapper">DataMapper</a> </li>
         <li> <a href="https://github.com/alu0100597929/Prct6_Analizador_PL0_PEG.git"  title="Repo">Repositorio</a> </li>
         <li> <a href="/tests"  title="Tests" <%=current?("/tests")%>>Tests</a> </li>
