cambios en página principal

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,7 @@
   </head>
   <body>
     <center>
-    <h1>Analizador de la gramática del lenguaje PL0 usando Jison</h1><br><br>
+    <h1>Analizador de Ámbito en PL0</h1><br><br>
     <nav>
       <ul>
 		<li> <a href="/"  title="Home" <%=current?("/")%>>Página principal</a> </li>
