--- a/views/index.erb
+++ b/views/index.erb
@@ -66,9 +66,12 @@
 
 <br><br>
 
+<p><FONT SIZE=5>Archivos guardados</FONT></p>
+<br>
+
 <nav>
   <table id="tablaArchivos">
-  <tr><th><FONT SIZE=5>Archivos guardados</FONT></th></tr>
+  
   <tr><th>Nombre</th><th>Usuario</th><th>Red social</th></tr>
          
         <ul>
