--- a/public/styles.css
+++ b/public/styles.css
@@ -7,12 +7,12 @@ body {
 }
 
 h1 {
-  color: #CC3333;
+  color: #111111;
   font: 32px/1 Helvetica, Arial, sans-serif; 
   background: #FFFFFF;
   border-radius: 5px;
-  border: 2px solid #CC3333;
-  width: 700px;
+  border: 2px solid #222222;
+  width: 500px;
 }
 
 header h1 {
@@ -35,10 +35,11 @@ nav {
     text-decoration: none;
     display: block;
     padding: 8px;
-    background: #CC3333;
+    background: #FFFFFF;
+    border: 2px solid #333333;
     color: white; }
     nav a:hover {
-      background: #111111; }
+      background: #333333; }
 
 p {
   font: 13px/1.4 Helvetica, Arial, sans-serif;
@@ -50,7 +51,7 @@ label {
   display: block; }
 
 nav a.current {
-  background: #990000; }
+  background: #888888; }
 
 .flash {
   width: 600px;
@@ -59,7 +60,7 @@ nav a.current {
   margin: 20px;
   background: #CC3333;
   color: #990033;
-  border: 1px solid #CC3333; }
+  border: 1px solid #333333; }
 
 #like p {
   font-weight: bold;
@@ -92,7 +93,7 @@ nav a.current {
   color: #444444;
   background-color: #FFFFFF;
   border-radius: 5px;
-  border: 2px solid #CC3333;
+  border: 2px solid #333333;
   display: block;
   height: 350px;
   width: 1000px;
@@ -103,15 +104,5 @@ nav a.current {
   color: #00ff33;
   background-color: #444444; 
   width: 400px;
-}
-
-#google {
-  color: #FFFFFF;
-  background-color: #CC3333;
-}
-
-#facebook {
-  color: #FFFFFF;
-  background-color: #0077CC;
 }
 
