--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,8 +27,8 @@
         <li> <a href="https://github.com/alu0100597929/Prct6_Analizador_PL0_PEG.git"  title="Repo">Repositorio</a> </li>
         <li> <a href="/tests"  title="Tests" <%=current?("/tests")%>>Tests</a> </li>
         <br><br>
-        <li id="google"> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
-        <li id="facebook"> <a href="/auth/facebook"  title="Facebook" <%=current?("/auth/facebook")%>>Sign in with Facebook</a> </li>
+        <li> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
+        <li> <a href="/auth/facebook"  title="Facebook" <%=current?("/auth/facebook")%>>Sign in with Facebook</a> </li>
       </ul>
     </nav>
     <%= yield %>
