cambio de estilo en tabla de archivos

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,6 @@
 <div id="content">
  <center>
 
-<li id="google"> <a href="/auth/google_oauth2"  title="Google" <%=current?("/auth/google_oauth2")%>>Sign in with Google</a> </li>
-<li id="facebook"> <a href="/auth/facebook"  title="Facebook" <%=current?("/auth/facebook")%>>Sign in with Facebook</a> </li>
-
-<br>
-
  <p>
     <div id="flash"><%= flash[:notice] if flash[:notice]%></div>
   </p>
@@ -84,7 +79,7 @@
           <% programs.each do |p| %>
             <tr>
             <td>
-              <li id="archivo"><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
+              <li><a href="<%= p.name %>" <%=current?('/'+p.name)%>><%= p.name %></a></li>
             </td>
 
             <td>
