--- a/public/styles.css
+++ b/public/styles.css
@@ -9,7 +9,7 @@ body {
 h1 {
   color: #111111;
   font: 32px/1 Helvetica, Arial, sans-serif; 
-  background: #FFFFFF;
+  background: #FFBBAA;
   border-radius: 5px;
   border: 2px solid #222222;
   width: 500px;
@@ -39,7 +39,7 @@ nav {
     border: 2px solid #333333;
     color: #222222; }
     nav a:hover {
-      background: #333333; }
+      background: #999999; }
 
 p {
   font: 13px/1.4 Helvetica, Arial, sans-serif;
@@ -106,17 +106,15 @@ nav a.current {
   width: 400px;
 }
 
-#google {
-  color: #FFFFFF;
-  background-color: #CC0011; 
+
+#tablaArchivos{
+  color: #444444;
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  border: 2px solid #333333;
 }
 
-#facebook {
-  color: #FFFFFF;
-  background-color: #0077BB; 
-}
-
-#archivo{
-  color: #222222;
-  background-color: #00DD22;
+td{
+  border-radius: 5px;
+  border: 2px solid #333333;
 }
