--- a/public/styles.css
+++ b/public/styles.css
@@ -7,9 +7,9 @@ body {
 }
 
 h1 {
-  color: #111111;
+  color: #FFFFFF;
   font: 32px/1 Helvetica, Arial, sans-serif; 
-  background: #FFBBAA;
+  background: #222222;
   border-radius: 5px;
   border: 2px solid #222222;
   width: 500px;
@@ -114,7 +114,7 @@ nav a.current {
   border: 2px solid #333333;
 }
 
-td{
+tr{
   border-radius: 5px;
   border: 2px solid #333333;
 }
