--- a/public/styles.css
+++ b/public/styles.css
@@ -112,9 +112,7 @@ nav a.current {
   background-color: #FFFFFF;
   border-radius: 5px;
   border: 2px solid #333333;
+  border-collapse:separate;
+  border-spacing:10px 50px;
 }
 
-tr{
-  border-radius: 5px;
-  border: 2px solid #333333;
-}
