--- a/views/index.erb
+++ b/views/index.erb
@@ -71,7 +71,7 @@
 <br>
 
 <nav>
-  <table id="tablaArchivos">
+  <table id="tablaArchivos" cellpadding="3" cellspacing="3">
   
   <tr><th>Nombre</th><th>Usuario</th><th>Red social</th></tr>
          
